--- a/README.org
+++ b/README.org
@@ -1,204 +1,243 @@
 #+title: You and me, zyre. 🍠
 
-* Problem statement
+* Problem
 
-The problem is to answer these questions in a satisfactory way:
+It is hard to find friends and maintain a healthy work environment.
 
-- How can an instance of my application know about other instances and
-  vice versa?
+I am a program with sockets.  Some will bind, some will connect, and
+some might even do both.  I am fond of my sockets and give them names
+so I will know them and know what I will do with them.  I do not
+really care about what my sockets bind or connect.  I trust them and
+the user to do what is right.  I like sockets because I can send and
+recv and the rest of the details just are not important to me.  
 
-- How can my application know about the addresses of sockets provided
-  by other applications and vice versa?
+I think you and many others are just like me.  We should meet and
+maybe hold hands if we are compatible.  How can I find you?  How will
+I know when you are around?  How do I know which of your sockets and
+you know which of my sockets can link up?  We should say hi and tell
+the world about our sockets and then we can each decide to be friends
+or go our own way.
 
-- How can my application select among those sockets to find a subset
-  of interest?
+Besides wanting to link up with others, I do a lot of things all by
+myself.  I am sure you do too.  I especially like having some of my
+sockets be used in one thread and other sockets used in another.  I
+know sockets do not like crossing threads so it is hard for me to be
+able to put them all together so I can tell you about them.  
 
-- How can these interesting sockets be identified in a way that is
-  semantically meaningful to my application code?
+I am also a little bit of a scatter brain.  My user tells me to run
+code that I barely know.  My user calls this code "plugins" or
+"modules" or "components".  That sounds good to me so I am okay with
+it.  But I do not always know all my sockets.
 
-- How can my multi-threaded application use sockets safely?
+So, how can you and me work something out and build a beautiful
+friendship?
 
-- How can my application use abstract plugins which may not "know"
-  about my application but also wants to use sockets in these ways?
+* Solution
 
-- How do I do this in C++, but maybe also in other languages?
+You and me, Zyre (yamz) targets C++ applications using [[https://github.com/zeromq/cppzmq][cppzmq]].  It
+sets up a little /in-process/ ZeroMQ network.  The network is centered
+on a "server" which coordinate access to Zyre, the ZeroMQ
+decentralized peer discovery mechanism.
 
-* yamz Solution
+Then, any number of yamz "clients" may connect to the yamz server over
+the /in-process/ network.  The yamz client will take care of the details
+of creating and configuring a number of sockets according to
+user-provided configuration.  All addresses that clients shall ~bind()~
+are reported to the server and collectively this forms a message
+published to the Zyre discovery network.  
 
-yamz answers these questions in a hopefully satisfying way.  
+The Zyre message includes an overall name for the process (the "node"
+ID), and ID names for each client of the node and for each port of the
+client.  At these three levels and at the level of individual port
+addresses the message includes associated key/value parameters.
 
-First, it uses the Zyre (ZRE) discovery mechanism to allow peers on
-the network to learn information about each other.  yamz uses Zyre
-publish information the application's sockets which ~bind()~ and from
-this information published by others it can learn which addresses the
-application sockets may ~connect()~.
+In this way, peers on the network see the ~bind()~ addresses and their
+identity information and may decide which sockets are suitable to
+~connect()~.  And, this brings in the second service provided to the
+yamz clients by the yamz server.  The clients may request /abstract
+address resolution/ by specifying addresses as /identity patterns/ to be
+matched against the published /identity parameters/.  As matches appear
+on the Zyre network, the server will reply to the client with concrete
+~bind()~ address of the peer to which the client may then have the
+appropriate socket ~connect()~.  All without the application having to
+life a finger.
 
-ZeroMQ (non-draft) sockets are only thread-safe when kept to a single
-thread.  yamz thus orchestrates this discovery protocol in a way that
-allows sockets to be created in the threads that will use them.  This
-means socket creation can still be distributed throughout application
-components, and even abstract plugins, while presenting to the
-discovery network information as if it was from a single entity.
+* Example
 
-Socket construction and their ~bind()~ and ~connect()~ becomes very
-uniform which minimizes the API to which application components must
-learn.  yamz takes this even further to allow the application
-components to have zero-configuration sockets.  yamz can receive its
-configuration directly and application developers need only agree on
-names for their sockets.  In cases where more fine-grained
-configuration control is required, yamz provides methods for it.
+A yamz application will make one ~yamz::Server~, typically in ~main()~ or
+other central code and some number of ~yamz::Client~ instances.
 
-In order to supply all this, yamz sets up a tiny *intra-application*
-network.  Nominally this network is based on ZeroMQ ~inproc~ transport
-so that traffic remains in memory of the application.  Being based on
-ZeroMQ it is possible to instead or in addition use other transports.
+** Server
 
-At the center of this network is the yamz server which mediates
-between Zyre and a number of clients.  Each distinct application
-component which needs one or more sockets may uses a simple yamz
-client API to simple get them, ready-to-use.  As the network involves
-asynchronous message passing while typical application code prefers to
-work with synchronous APIs, both the server and client are provided
-with an outward synchronous facade to an asynchronous backend.
+The ~yamz::Server~ provides a fully *synchronous* API around an
+*asynchronous* thread function (/actor pattern/).  The body of that
+function handles all communication between API, Zyre and the
+in-process clients.  In principle, an application may make multiple
+servers and each will appear as a unique Zyre node.
 
+Using it the server in code is very easy.  Somewhere near your ~main()~
+you would have code like:
 
-* Client API walkthrough
+#+begin_src c++
+    zmq::context_t ctx;
+    yamz::ServerConfig cfg = ...;
+    yamz::Server server(ctx, cfg);
+    server.start();
+#+end_src
 
+The same ZeroMQ context given to the server must be used by the
+~yamz::Client~ instances if they will talk over ~inproc://~.  If that can
+not be arranged, other transport may be used.
 
-* Server API walkthrough
+After constructing the server, your program can mostly ignore it other
+than to make sure it stays in scope.  When the server instance is
+destroyed, the peers on the Zyre network and the in-process clients
+will be notified.
 
-* Socket Addressing
+** Client
 
-yamz uses URIs to identify sockets.
+An application component/module/plugin/thread may create a
+~yamz::Client~ to manage its sockets.
 
-** Address Categories
+#+begin_src c++
+  void my_thread_func(zmq::context_t& ctx, ClientConfig cfg)
+  {
+      // The configuration fully determines what sockets we have.
+      // We must only agree on the socket ("port") names.
+      yamz::Client cli(ctx, cfg);
 
-Depending on the form and intent of the information provided by a URI,
-it is interpreted as being in one of three categories.
+      // Make a request to the server with the bind() addresses made by
+      // the client and with any connect() address resolutions. 
+      cli.discover(std::chrono::milliseconds{1000});
 
-- Concrete :: Any fully-qualified address in one of the supported
-  ZeroMQ URI schemes (~tcp~, ~ipc~ and ~inproc~).  It is fully-qualified in
-  that it contains no wildcard character.  A *concrete* address may be
-  given for either a ~bind()~ or a ~connect()~.
+      auto& port1 = cli.get("port1");
+      while (true) {
+          std::string msg = "I AM NOT YELLING, YOU ARE YELLING";
+          port1.send(zmq::message_t{msg}, zmq::send_flags::none);
+      }
+  }
+#+end_src
 
-- Ephemeral :: Any address given in one of the supported ZeroMQ URI
-  schemes which has at least one wildcard character ("~*~").  An
-  *ephemeral* address may only be given for a ~bind()~.  In the process of
-  performing a ~bind()~ with an ephermal address, yamz will construct a
-  corresponding *concrete* address.  Note, a concrete address may be
-  used in place of an ephemeral one.
+Here, the name of this (rather silly) function hints that it runs in a
+~std::thread~.  It is possible to construct the ~yamz::Client~ in one
+another thread but the application must take care to keep all calls to
+~.discover()~ in the same thread that the sockets will be used (eg,
+after accessing them by reference via a call to ~.get()~).  This care is
+needed to assure ZeroMQ socket thread safety and the yamz client is
+specially design to restrict socket access internally to the
+~.discover()~ method.
 
-- Abstract :: An address given with a URI scheme of ~yamz~.  It may be
-  resolved into zero or more concrete addresses through the yamz
-  discovery process.  An *abstract* address may only be given for the
-  intention of applying a ~connect()~ to all resolved concrete
-  addresses.  
+This example shows the main ~yamz::Client~ features and if the
+application does not require to synchronize with peers as they are
+discovered, it may be enough.  
 
-All address categories URIs may have a *query* part which is described below.
+Typically, however, the application may want to "wait" in some way for
+at least one peer to show up that it should ~connect()~.  Or, it may
+have a more complex criteria to transition from some "initialization"
+state to an "operational" one.
 
-** ~yamz://~ URI scheme
+There are two ways to do this waiting.  The first is to simply sit in
+a loop calling ~.discover()~.
 
-As above, the ~yamz~ URI scheme is only meaningful for specifying
-abstract addresses.  They are resolved to a set of concrete addresses
-by yamz and to each a ~connect()~ will be applied.  
+#+begin_src c++
+  while (true) {
+      auto what = cli.discover();
+      if (what == yamz::ClientAction::terminate) {
+          std::cerr << "server terminated, I will to\n";
+          return;
+      }
+      if (what == yamz::ClientAction::connect) {
+          std::cerr << "I got one connect, time to get to work\n";    
+          break;
+      }
+      std::this_thread::sleep_for(std::chrono::milliseconds{1000});
+  }
+#+end_src
 
-The ~yamz~ URI (omitting the *query* part) is generally:
+The call to sleep is not great as it hangs up the client, but it may
+be acceptable to the developer.  A more reactive pattern can be
+created by getting the client socket in order to incorporate it into a
+poller possibly along with other application sockets provided by the
+client.  Here is an example of an application function that waits for
+one of its sockets to make at least one connection.
+
+#+begin_src c++
+  auto& port1 = cli.get("port1");
+  auto& sock1 = port1.sock;
+  auto& csock = cli.socket();
+
+  zmq::poller_t<> poller;
+  poller.add(sock1, zmq::event_flags::pollin);
+  poller.add(csock, zmq::event_flags::pollin);
+  std::vector<zmq::poller_event<>> events(2);
+  while (true) {
+      const int nevents = poller.wait_all(events, timeout);
+
+      if (!nevents and !port1.conns.empty()) {
+          do_some_idle_task();
+          continue;
+      }
+
+      for (int iev = 0; iev < nevents; ++iev) {
+
+          if (events[iev].socket == csock) { // service client
+              auto what = cli.discover();
+              if (what == yamz::ClientAction::terminate) {
+                  std::cerr << "server terminated, I will too.\n";
+                  return;
+              }
+
+              if (events[iev].socket == sock1) {
+                  std::cerr << "I got something on my app socket!\n"
+                  handle_socket(sock1);
+              }
+          }
+      }
+  }
+#+end_src
+
+This is a connection-oriented policy.  In the future, yamz may provide
+notification for when a peer connects to a client's ~bind()~ address.
+
+** Application
+
+A full application is provided in [[file:test/test_yamz_cluster.cpp]] and
+where we describe how to run it.
+
+But first, we must also introduce the fact that most yamz objects are
+powered by [[https://brettviren.github.io/moo][moo schema]].  The types that make up client and server
+protocol, the object provided by the ~YAMZ~ Zyre header and teh client
+and server configuration objects are all described in moo schema in
+the file [[file:src/yamz-schema.jsonnet]].  
+
+Also included in the yamz schema the message types exchanged by the
+~test_yamz_cluster~ application and the configuration objects that the
+application consumes on the command line.  For these latter one can
+generate configuration like:
 
 #+begin_example
-yamz://[node]/[path]
+  $ python3 test/test_yamz_cluster.py nodeA 2 > nodeA.json
+  $ python3 test/test_yamz_cluster.py nodeB 3 > nodeB.json
 #+end_example
 
-The parts are interpreted as:
-
-- node :: the name for a zyre peer, required but wildcard allowed,
-
-- path :: a /-separated path locating a node's socket, required but elements may be provided by wildcards.
-
-The ~yamz~ scheme allows the *nade* and elements of the *path* to be
-specified with the wildcard character ("~*~").  Some examples:
-
-- ~yamz://*/log~ would match all sockets named "log" for all nodes
-- ~yamz://friend/*/out~ would match all sockets named "out" in all components of node "friend"
-- ~yamz://friend/fanout/*~ would match all sockets from component "fanout" of node "friend".
-
-Note, the wildcard does not match element separators but maybe one day
-we support ant glob.  See next for other ways to match.
-
-** Query parameters
-
-For a *concrete* or *ephemeral* ~bind()~ address, the query part specifies a
-set of key/value attributes to associate with the address in yamz
-discovery.
-
-For an *abstract* ~connect()~ address, the query part specifies /matches/
-(regular expressions) to apply against key/value attributes in yamz
-discovery.  
-
-For example, a ~bind()~ address for a socket that provides a source of
-"TPC trigger primitive" objects which derive from some portion of a
-larger data source (part, det, apa, face) may be specified like:
+This configure one instance of the test application to have a node
+name ~nodeA~ with 2 clients and another ~nodeB~ with 3 clients.  We may
+run these two application in their own terminal simply like:
 
 #+begin_example
-tcp://*:*?part=2&det=tpc&role=tpsource&apa=42&face=1
+  $ ./build/test_yamz_cluster nodeA.json
 #+end_example
 
-Another socket may wish to connect to a subset of all such sockets
-over all faces of multiple APAs and might do so by specifying an
-abstract address like:
+Etc for any others.  The test application do not have any
+sophisticated process control so simply Ctrl-C to kill them.  
 
-#+begin_example
-yamz://*/tps?part=2&det=tpc&apa=4[12]
-#+end_example
+Each client of each node of this test app will ~bind()~ one socket which
+will be published to Zyre.  It will then request its server to resolve
+the addresses all peers for ~connect()~ by a second socket.  Between
+each client's pair of sockets one then forms a fully-connected network.  
 
-Where, in this invented world, the socket name ~tps~ implies the role
-~tpsource~.  Note, the ~yamz::Server~ may be given a collection of
-"expected" peer nodes.  If so, the wildcard for the node ~yamz://*~ will
-match within this subset.
+Each client will then start requesting the system time of its peers
+and calculating the latency to get a response all the while responding
+to these requests from others.
 
-* Discovery
-
-yamz discovery is based on Zyre which implements the concept of a
-fully connected graph.  Every node added to the graph knows about
-every other node.  An instance of ~yamz::Server~ is associated with
-one node and makes known some of the information it has collected from
-the instances of ~yamz::Client~ requests it has received.  From the
-information published by other nodes, the ~yamz::Server~ will attempt
-to satisfy the outstanding client requests.
-
-An application can make a number of ~yamz::Server~ instances.
-However, it is typically sufficient for one process to have but one as
-a single yamz node can take care of complex internal structure.  For
-example the application may have yamz clients distributed through
-"components", "modules", "plugins", etc.
-
-The application developer need not understand the details of yamz
-discovery and instead focus on the simple ~yamz::Server~ and/or
-~yamz::Client~ class API.  The details that follow will be important
-for any compatible implementation of yamz that does not use ~libyamz~.
-
-** ~YAMZ~ Header
-
-yamz publishes in the Zyre ENTER event a header named ~YAMZ~.  The
-value of this header is a JSON encoded string.  Loading the JSON
-results in a tree structure that maps to the application structure as
-reported by the yamz client requests.
-
-Every vertex of this tree is an object following ~yamz::TreeVtx~ schema
-and having attributes:
-
-- name :: (required) a simple string identifier unique to all sibling vertices
-- port :: (optional) a description of a bind socket of type ~yamz::TreePort~
-- params :: (optiona) zero or more key/value pairs, each as free-form strings, each of type ~yamz::TreeParam~
-- children :: (optional) sequence of zero or more child vertices
-
-Parameters may be provided directly to the ~yamz::Server~ instance or
-through client requests.  Parameters are taken to assert information
-about the vertex's *port* (if it exists) and to any children vertices.
-A parameter in a child vertex is taken to override any of the same
-name found in ancestor vertices.
-
-** Other yamz headers
-
-yamz may define additional headers and reserves them to begin with a
-~YAMZ~ prefix.
 
